--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: Example CI/CD Pipeline
+name: CI/CD Pipeline
 
 on:
   push:
@@ -11,11 +11,18 @@ on:
       - develop
   workflow_dispatch:
 
+env:
+  PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+  GCR_REGION: australia-southeast2
+  SERVICE_NAME: financial-analyst
+  IMAGE_NAME: financial-analyst
+
 jobs:
+  # Job 1: Lint and Test
   test:
     name: Lint and Test
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -34,20 +41,25 @@ jobs:
 
       - name: Lint with flake8
         run: |
+          # Stop the build if there are Python syntax errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          # Exit-zero treats all errors as warnings
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
         continue-on-error: true
 
       - name: Run tests
         run: |
+          # Add your test commands here
           echo "No tests defined yet"
         continue-on-error: true
 
+  # Job 2: Build and Push Docker Image
   build-and-push:
     name: Build and Push to GCR
     runs-on: ubuntu-latest
     needs: test
-
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -55,8 +67,8 @@ jobs:
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
         with:
-          project_id: YOUR_PROJECT_ID
-          service_account_key: YOUR_SERVICE_ACCOUNT_KEY
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
 
       - name: Configure Docker to use gcloud as credential helper
@@ -66,23 +78,28 @@ jobs:
       - name: Build Docker image
         run: |
           docker build \
-            -t gcr.io/YOUR_PROJECT_ID/YOUR_IMAGE_NAME:latest \
+            -t gcr.io/${{ env.PROJECT_ID }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
+            -t gcr.io/${{ env.PROJECT_ID }}/${{ env.IMAGE_NAME }}:latest \
             .
 
       - name: Push Docker image to GCR
         run: |
-          docker push gcr.io/YOUR_PROJECT_ID/YOUR_IMAGE_NAME:latest
+          docker push gcr.io/${{ env.PROJECT_ID }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+          docker push gcr.io/${{ env.PROJECT_ID }}/${{ env.IMAGE_NAME }}:latest
 
       - name: Output image details
         run: |
           echo "Image pushed successfully!"
-          echo "Image URL: gcr.io/YOUR_PROJECT_ID/YOUR_IMAGE_NAME:latest"
+          echo "Image URL: gcr.io/${{ env.PROJECT_ID }}/${{ env.IMAGE_NAME }}:${{ github.sha }}"
+          echo "Latest URL: gcr.io/${{ env.PROJECT_ID }}/${{ env.IMAGE_NAME }}:latest"
 
+  # Job 3: Deploy to Cloud Run
   deploy:
     name: Deploy to Cloud Run
     runs-on: ubuntu-latest
     needs: build-and-push
-
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -90,17 +107,18 @@ jobs:
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
         with:
-          project_id: YOUR_PROJECT_ID
-          service_account_key: YOUR_SERVICE_ACCOUNT_KEY
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
 
       - name: Deploy to Cloud Run
         run: |
-          gcloud run deploy YOUR_SERVICE_NAME \
-            --image gcr.io/YOUR_PROJECT_ID/YOUR_IMAGE_NAME:latest \
+          gcloud run deploy ${{ env.SERVICE_NAME }} \
+            --image gcr.io/${{ env.PROJECT_ID }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
             --platform managed \
-            --region YOUR_REGION \
+            --region ${{ env.GCR_REGION }} \
             --allow-unauthenticated \
+            --set-env-vars OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }},MARKETAUX_API_KEY=${{ secrets.MARKETAUX_API_KEY }},OPENBB_PAT=${{ secrets.OPENBB_PAT }},AZURE_POSTGRES_PASSWORD=${{ secrets.AZURE_POSTGRES_PASSWORD }},EMAIL_SENDER=${{ secrets.EMAIL_SENDER }},EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }},SMTP_SERVER=${{ secrets.SMTP_SERVER }},SMTP_PORT=${{ secrets.SMTP_PORT }} \
             --memory 2Gi \
             --cpu 2 \
             --timeout 300 \
@@ -109,9 +127,9 @@ jobs:
 
       - name: Get service URL
         run: |
-          SERVICE_URL=$(gcloud run services describe YOUR_SERVICE_NAME \
+          SERVICE_URL=$(gcloud run services describe ${{ env.SERVICE_NAME }} \
             --platform managed \
-            --region YOUR_REGION \
+            --region ${{ env.GCR_REGION }} \
             --format 'value(status.url)')
           echo "Service deployed successfully!"
           echo "Service URL: $SERVICE_URL"
@@ -121,8 +139,8 @@ jobs:
         run: |
           echo "## Deployment Summary :rocket:" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "- **Service Name**: YOUR_SERVICE_NAME" >> $GITHUB_STEP_SUMMARY
-          echo "- **Region**: YOUR_REGION" >> $GITHUB_STEP_SUMMARY
-          echo "- **Image**: gcr.io/YOUR_PROJECT_ID/YOUR_IMAGE_NAME:latest" >> $GITHUB_STEP_SUMMARY
-          echo "- **Service URL**: $SERVICE_URL" >> $GITHUB_STEP_SUMMARY
+          echo "- **Service Name**: ${{ env.SERVICE_NAME }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **Region**: ${{ env.GCR_REGION }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **Image**: gcr.io/${{ env.PROJECT_ID }}/${{ env.IMAGE_NAME }}:${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **Service URL**: ${{ env.SERVICE_URL }}" >> $GITHUB_STEP_SUMMARY
           echo "- **Deployment Time**: $(date)" >> $GITHUB_STEP_SUMMARY
