--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -58,26 +58,25 @@ jobs:
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v1
         with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
-          export_default_credentials: true
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
 
-      - name: Configure Docker credentials for Artifact Registry
+      - name: Configure Docker for Container Registry
         run: |
-          gcloud auth configure-docker australia-southeast1-docker.pkg.dev --quiet
+          gcloud auth configure-docker gcr.io --quiet
 
       - name: Build Docker image
         run: |
           docker build -t financial-analyst:latest .
-          docker tag financial-analyst:latest australia-southeast1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/financial-analyst-repo/financial-analyst:${{ github.sha }}
-          docker tag financial-analyst:latest australia-southeast1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/financial-analyst-repo/financial-analyst:latest
+          docker tag financial-analyst:latest gcr.io/${{ secrets.GCP_PROJECT_ID }}/financial-analyst:${{ github.sha }}
+          docker tag financial-analyst:latest gcr.io/${{ secrets.GCP_PROJECT_ID }}/financial-analyst:latest
 
-      - name: Push Docker image
+      - name: Push Docker image to GCR
         run: |
-          docker push australia-southeast1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/financial-analyst-repo/financial-analyst:${{ github.sha }}
-          docker push australia-southeast1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/financial-analyst-repo/financial-analyst:latest
+          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/financial-analyst:${{ github.sha }}
+          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/financial-analyst:latest
 
-  deploy:
+    deploy:
     name: Deploy to Cloud Run
     runs-on: ubuntu-latest
     needs: build-and-push
@@ -90,9 +89,8 @@ jobs:
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v1
         with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
-          export_default_credentials: true
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
 
       - name: Deploy to Cloud Run
         run: |
