--- a/requirements.txt
+++ b/requirements.txt
@@ -1,423 +1,387 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: win-64
-# created-by: conda 25.5.1
-ag2=0.9.7=pypi_0
-aiohappyeyeballs=2.6.1=pypi_0
-aiohttp=3.13.0=pypi_0
-aiohttp-client-cache=0.11.1=pypi_0
-aiosignal=1.4.0=pypi_0
-aiosqlite=0.20.0=pypi_0
-alembic=1.16.4=pypi_0
-altair=5.5.0=pypi_0
-annotated-types=0.7.0=pypi_0
-anthropic=0.60.0=pypi_0
-anyio=4.9.0=pypi_0
-appdirs=1.4.4=pypi_0
-arch=7.2.0=pypi_0
-asgiref=3.9.1=pypi_0
-asttokens=3.0.0=pyhd8ed1ab_1
-async-lru=2.0.5=pypi_0
-asyncer=0.0.8=pypi_0
-attrs=25.3.0=pypi_0
-authlib=1.6.1=pypi_0
-autogen=0.9.7=pypi_0
-autogen-agentchat=0.7.1=pypi_0
-autogen-core=0.7.1=pypi_0
-babel=2.17.0=pypi_0
-backoff=2.2.1=pypi_0
-bcrypt=4.3.0=pypi_0
-beautifulsoup4=4.13.4=pypi_0
-blinker=1.9.0=pypi_0
-brotli=1.1.0=pypi_0
-browserbase=1.4.0=pypi_0
-build=1.2.2.post1=pypi_0
-bzip2=1.0.8=h2bbff1b_6
-ca-certificates=2025.7.14=h4c7d964_0
-cachetools=5.5.2=pypi_0
-cattrs=25.1.1=pypi_0
-certifi=2025.7.14=pypi_0
-cffi=1.17.1=pypi_0
-charset-normalizer=3.4.2=pypi_0
-chroma-hnswlib=0.7.6=pypi_0
-chromadb=0.5.23=pypi_0
-click=8.2.1=pypi_0
-cohere=5.16.1=pypi_0
-colorama=0.4.6=pyhd8ed1ab_1
-coloredlogs=15.0.1=pypi_0
-comm=0.2.3=pyhe01879c_0
-contourpy=1.3.3=pypi_0
-courlan=1.3.2=pypi_0
-cpython=3.11.13=py311hd8ed1ab_0
-crewai=0.152.0=pypi_0
-crewai-tools=0.59.0=pypi_0
-cryptography=45.0.5=pypi_0
-curl-adapter=1.1.0=pypi_0
-curl-cffi=0.12.0=pypi_0
-cycler=0.12.1=pypi_0
-cyclopts=3.22.2=pypi_0
-cython=3.1.2=pypi_0
-dataclasses-json=0.6.7=pypi_0
-dateparser=1.2.2=pypi_0
-debugpy=1.8.15=py311h5dfdfe8_0
-decorator=5.2.1=pyhd8ed1ab_0
-deepdiff=8.6.1=pypi_0
-defusedxml=0.8.0rc2=pypi_0
-deprecation=2.1.0=pypi_0
-diskcache=5.6.3=pypi_0
-distro=1.9.0=pypi_0
-dnspython=2.7.0=pypi_0
-docker=7.1.0=pypi_0
-docstring-parser=0.17.0=pypi_0
-docutils=0.21.2=pypi_0
-durationpy=0.10=pypi_0
-email-validator=2.2.0=pypi_0
-embedchain=0.1.128=pypi_0
-et-xmlfile=2.0.0=pypi_0
-exceptiongroup=1.3.0=pyhd8ed1ab_0
-exchange-calendars=4.11=pypi_0
-executing=2.2.0=pyhd8ed1ab_0
-expat=2.7.1=h8ddb27b_0
-fastapi=0.116.2=pypi_0
-fastavro=1.11.1=pypi_0
-fastjsonschema=2.21.1=pypi_0
-fastmcp=2.10.6=pypi_0
-filelock=3.18.0=pypi_0
-filetype=1.2.0=pypi_0
-finvizfinance=1.1.1=pypi_0
-flaml=2.3.5=pypi_0
-flatbuffers=25.2.10=pypi_0
-fonttools=4.59.0=pypi_0
-formulaic=1.2.0=pypi_0
-fpdf=1.7.2=pypi_0
-freezegun=1.5.3=pypi_0
-frozendict=2.4.6=pypi_0
-frozenlist=1.7.0=pypi_0
-fsspec=2025.7.0=pypi_0
-gitdb=4.0.12=pypi_0
-gitpython=3.1.44=pypi_0
-google-ai-generativelanguage=0.6.18=pypi_0
-google-api-core=2.25.1=pypi_0
-google-auth=2.40.3=pypi_0
-googleapis-common-protos=1.70.0=pypi_0
-gptcache=0.1.44=pypi_0
-greenlet=3.2.3=pypi_0
-grpcio=1.74.0=pypi_0
-grpcio-status=1.74.0=pypi_0
-h11=0.16.0=pypi_0
-h2=4.2.0=pypi_0
-hpack=4.1.0=pypi_0
-html5lib=1.1=pypi_0
-htmldate=1.9.3=pypi_0
-httpcore=1.0.9=pypi_0
-httptools=0.6.4=pypi_0
-httpx=0.28.1=pypi_0
-httpx-sse=0.4.0=pypi_0
-huggingface-hub=0.34.3=pypi_0
-humanfriendly=10.0=pypi_0
-hyperframe=6.1.0=pypi_0
-idna=3.10=pypi_0
-importlib-metadata=8.7.0=pyhe01879c_1
-importlib-resources=6.5.2=pypi_0
-inflection=0.5.1=pypi_0
-iniconfig=2.1.0=pypi_0
-inscriptis=2.6.0=pypi_0
-instructor=1.10.0=pypi_0
-interface-meta=1.3.0=pypi_0
-ipykernel=6.29.5=pyh4bbf305_0
-ipython=9.4.0=pyh6be1c34_0
-ipython_pygments_lexers=1.1.1=pyhd8ed1ab_0
-ipywidgets=8.1.7=pypi_0
-itsdangerous=2.2.0=pypi_0
-jedi=0.19.2=pyhd8ed1ab_1
-jinja2=3.1.6=pypi_0
-jiter=0.10.0=pypi_0
-joblib=1.5.1=pypi_0
-json-repair=0.25.2=pypi_0
-json5=0.12.0=pypi_0
-jsonpatch=1.33=pypi_0
-jsonpickle=4.1.1=pypi_0
-jsonpointer=3.0.0=pypi_0
-jsonref=1.1.0=pypi_0
-jsonschema=4.25.0=pypi_0
-jsonschema-specifications=2025.4.1=pypi_0
-jupyter_client=8.6.3=pyhd8ed1ab_1
-jupyter_core=5.8.1=pyh5737063_0
-jupyterlab-widgets=3.0.15=pypi_0
-justext=3.0.2=pypi_0
-kiwisolver=1.4.8=pypi_0
-korean-lunar-calendar=0.3.1=pypi_0
-krb5=1.21.3=hdf4eb48_0
-kubernetes=33.1.0=pypi_0
-lancedb=0.24.2=pypi_0
-langchain=0.3.26=pypi_0
-langchain-cohere=0.3.5=pypi_0
-langchain-community=0.3.27=pypi_0
-langchain-core=0.3.70=pypi_0
-langchain-experimental=0.3.4=pypi_0
-langchain-google-genai=2.1.8=pypi_0
-langchain-openai=0.2.14=pypi_0
-langchain-text-splitters=0.3.8=pypi_0
-langgraph=0.5.4=pypi_0
-langgraph-checkpoint=2.1.1=pypi_0
-langgraph-prebuilt=0.5.2=pypi_0
-langgraph-sdk=0.1.74=pypi_0
-langsmith=0.3.45=pypi_0
-libffi=3.4.4=hd77b12b_1
-libsodium=1.0.20=hc70643c_0
-linearmodels=6.1=pypi_0
-litellm=1.74.3=pypi_0
-llvmlite=0.44.0=pypi_0
-lxml=5.4.0=pypi_0
-lxml-html-clean=0.4.2=pypi_0
-mako=1.3.10=pypi_0
-markdown-it-py=3.0.0=pypi_0
-markupsafe=3.0.2=pypi_0
-marshmallow=3.26.1=pypi_0
-matplotlib=3.10.3=pypi_0
-matplotlib-inline=0.1.7=pyhd8ed1ab_1
-mcp=1.12.0=pypi_0
-mdurl=0.1.2=pypi_0
-mem0ai=0.1.115=pypi_0
-mmh3=5.2.0=pypi_0
-monotonic=1.6=pypi_0
-more-itertools=10.7.0=pypi_0
-mpmath=1.3.0=pypi_0
-multidict=6.6.3=pypi_0
-multitasking=0.0.12=pypi_0
-mypy-extensions=1.1.0=pypi_0
-narwhals=1.48.0=pypi_0
-nasdaq-data-link=1.0.4=pypi_0
-nbformat=5.10.4=pypi_0
-nest-asyncio=1.6.0=pyhd8ed1ab_1
-networkx=3.5=pypi_0
-nodeenv=1.9.1=pypi_0
-numba=0.61.2=pypi_0
-numpy=1.26.4=pypi_0
-oauthlib=3.3.1=pypi_0
-onnxruntime=1.22.0=pypi_0
-openai=1.97.0=pypi_0
-openapi-pydantic=0.5.1=pypi_0
-openbb=4.5.0=pypi_0
-openbb-alpha-vantage=1.4.2=pypi_0
-openbb-benzinga=1.5.0=pypi_0
-openbb-biztoc=1.5.0=pypi_0
-openbb-bls=1.2.0=pypi_0
-openbb-cboe=1.4.2=pypi_0
-openbb-cftc=1.2.0=pypi_0
-openbb-charting=2.3.5=pypi_0
-openbb-commodity=1.4.0=pypi_0
-openbb-congress-gov=1.1.0=pypi_0
-openbb-core=1.5.1=pypi_0
-openbb-crypto=1.5.0=pypi_0
-openbb-currency=1.5.0=pypi_0
-openbb-deribit=1.0.2=pypi_0
-openbb-derivatives=1.5.0=pypi_0
-openbb-ecb=1.4.3=pypi_0
-openbb-econdb=1.4.0=pypi_0
-openbb-econometrics=1.5.4=pypi_0
-openbb-economy=1.5.0=pypi_0
-openbb-equity=1.5.0=pypi_0
-openbb-etf=1.5.0=pypi_0
-openbb-famafrench=1.0.0=pypi_0
-openbb-federal-reserve=1.5.0=pypi_0
-openbb-finra=1.4.2=pypi_0
-openbb-finviz=1.3.2=pypi_0
-openbb-fixedincome=1.5.0=pypi_0
-openbb-fmp=1.5.0=pypi_0
-openbb-fred=1.5.0=pypi_0
-openbb-government-us=1.4.2=pypi_0
-openbb-imf=1.2.0=pypi_0
-openbb-index=1.5.0=pypi_0
-openbb-intrinio=1.5.0=pypi_0
-openbb-mcp-server=1.0.0=pypi_0
-openbb-multpl=1.1.2=pypi_0
-openbb-nasdaq=1.4.2=pypi_0
-openbb-news=1.5.0=pypi_0
-openbb-oecd=1.5.0=pypi_0
-openbb-platform-api=1.2.1=pypi_0
-openbb-polygon=1.5.0=pypi_0
-openbb-quantitative=1.4.4=pypi_0
-openbb-regulators=1.5.0=pypi_0
-openbb-sec=1.5.0=pypi_0
-openbb-seeking-alpha=1.4.2=pypi_0
-openbb-stockgrid=1.4.2=pypi_0
-openbb-technical=1.4.4=pypi_0
-openbb-tiingo=1.5.0=pypi_0
-openbb-tmx=1.3.3=pypi_0
-openbb-tradier=1.3.2=pypi_0
-openbb-tradingeconomics=1.5.0=pypi_0
-openbb-us-eia=1.2.0=pypi_0
-openbb-wsj=1.4.2=pypi_0
-openbb-yfinance=1.5.0=pypi_0
-openpyxl=3.1.5=pypi_0
-openssl=3.5.1=h725018a_0
-opentelemetry-api=1.36.0=pypi_0
-opentelemetry-exporter-otlp-proto-common=1.36.0=pypi_0
-opentelemetry-exporter-otlp-proto-grpc=1.36.0=pypi_0
-opentelemetry-exporter-otlp-proto-http=1.36.0=pypi_0
-opentelemetry-instrumentation=0.57b0=pypi_0
-opentelemetry-instrumentation-asgi=0.57b0=pypi_0
-opentelemetry-instrumentation-fastapi=0.57b0=pypi_0
-opentelemetry-proto=1.36.0=pypi_0
-opentelemetry-sdk=1.36.0=pypi_0
-opentelemetry-semantic-conventions=0.57b0=pypi_0
-opentelemetry-util-http=0.57b0=pypi_0
-orderly-set=5.5.0=pypi_0
-orjson=3.11.0=pypi_0
-ormsgpack=1.10.0=pypi_0
-overrides=7.7.0=pypi_0
-packaging=25.0=pyh29332c3_1
-pandas=2.3.1=pypi_0
-pandas-ta-openbb=0.4.22=pypi_0
-parso=0.8.4=pyhd8ed1ab_1
-patsy=1.0.1=pypi_0
-pdfminer-six=20250506=pypi_0
-pdfplumber=0.11.7=pypi_0
-peewee=3.18.2=pypi_0
-pickleshare=0.7.5=pyhd8ed1ab_1004
-pillow=11.3.0=pypi_0
-pip=25.1=pyhc872135_2
-platformdirs=4.3.8=pyhe01879c_0
-playwright=1.54.0=pypi_0
-plotly=6.2.0=pypi_0
-pluggy=1.6.0=pypi_0
-portalocker=2.7.0=pypi_0
-posthog=3.25.0=pypi_0
-prompt-toolkit=3.0.51=pyha770c72_0
-propcache=0.3.2=pypi_0
-proto-plus=1.26.1=pypi_0
-protobuf=5.29.5=pypi_0
-psutil=7.0.0=py311he736701_0
-psycopg2=2.9.11=pypi_0
-psycopg2-binary=2.9.11=pypi_0
-pure_eval=0.2.3=pyhd8ed1ab_1
-pyarrow=21.0.0=pypi_0
-pyasn1=0.6.1=pypi_0
-pyasn1-modules=0.4.2=pypi_0
-pyautogen=0.10.0=pypi_0
-pycparser=2.22=pypi_0
-pycurl=7.45.6=pypi_0
-pydantic=2.12.0=pypi_0
-pydantic-core=2.41.1=pypi_0
-pydantic-settings=2.10.1=pypi_0
-pydeck=0.9.1=pypi_0
-pyee=13.0.0=pypi_0
-pygments=2.19.2=pyhd8ed1ab_0
-pyhdfe=0.2.0=pypi_0
-pyjwt=2.10.1=pypi_0
-pyluach=2.2.0=pypi_0
-pymupdf=1.26.4=pypi_0
-pyparsing=3.2.3=pypi_0
-pypdf=5.9.0=pypi_0
-pypdfium2=4.30.0=pypi_0
-pyperclip=1.9.0=pypi_0
-pypika=0.48.9=pypi_0
-pyproject-hooks=1.2.0=pypi_0
-pyreadline3=3.5.4=pypi_0
-pyright=1.1.403=pypi_0
-pysbd=0.3.4=pypi_0
-pytest=8.4.1=pypi_0
-pytest-freezegun=0.4.2=pypi_0
-python=3.11.13=h981015d_0
-python-dateutil=2.9.0.post0=pyhe01879c_2
-python-dotenv=1.1.1=pypi_0
-python-multipart=0.0.20=pypi_0
-python_abi=3.11=2_cp311
-pytube=15.0.0=pypi_0
-pytz=2025.2=pypi_0
-pyvis=0.3.2=pypi_0
-pywin32=311=py311hefeebc8_0
-pyyaml=6.0.2=pypi_0
-pyzmq=27.0.0=py311h484c95c_0
-qdrant-client=1.15.0=pypi_0
-random-user-agent=1.0.1=pypi_0
-referencing=0.36.2=pypi_0
-regex=2024.11.6=pypi_0
-reportlab=4.4.4=pypi_0
-requests=2.32.5=pypi_0
-requests-cache=1.2.1=pypi_0
-requests-oauthlib=2.0.0=pypi_0
-requests-toolbelt=1.0.0=pypi_0
-rich=13.9.4=pypi_0
-rich-rst=1.3.1=pypi_0
-rpds-py=0.26.0=pypi_0
-rsa=4.9.1=pypi_0
-ruff=0.13.3=pypi_0
-safetensors=0.6.2=pypi_0
-schedule=1.2.2=pypi_0
-schema=0.7.7=pypi_0
-scikit-learn=1.7.1=pypi_0
-scipy=1.15.3=pypi_0
-seaborn=0.13.2=pypi_0
-sentence-transformers=5.1.0=pypi_0
-setuptools=78.1.1=py311haa95532_0
-setuptools-scm=8.3.1=pypi_0
-shellingham=1.5.4=pypi_0
-six=1.17.0=pyhe01879c_1
-smmap=5.0.2=pypi_0
-sniffio=1.3.1=pypi_0
-soupsieve=2.7=pypi_0
-sqlalchemy=2.0.41=pypi_0
-sqlite=3.50.2=hda9a48d_1
-sse-starlette=2.4.1=pypi_0
-stack_data=0.6.3=pyhd8ed1ab_1
-stagehand=0.5.0=pypi_0
-starlette=0.46.2=pypi_0
-statsmodels=0.14.5=pypi_0
-streamlit=1.47.0=pypi_0
-sympy=1.14.0=pypi_0
-tabulate=0.9.0=pypi_0
-tavily-python=0.7.10=pypi_0
-tenacity=9.1.2=pypi_0
-termcolor=3.1.0=pypi_0
-threadpoolctl=3.6.0=pypi_0
-tiktoken=0.9.0=pypi_0
-tk=8.6.14=h5e9d12e_1
-tld=0.13.1=pypi_0
-tokenizers=0.21.4=pypi_0
-toml=0.10.2=pypi_0
-tomli=2.2.1=pypi_0
-tomli-w=1.2.0=pypi_0
-toolz=1.0.0=pypi_0
-torch=2.8.0=pypi_0
-tornado=6.5.1=py311he736701_0
-tqdm=4.67.1=pypi_0
-trafilatura=2.0.0=pypi_0
-traitlets=5.14.3=pyhd8ed1ab_1
-transformers=4.55.4=pypi_0
-typer=0.16.0=pypi_0
-types-requests=2.32.4.20250611=pypi_0
-typing-inspect=0.9.0=pypi_0
-typing-inspection=0.4.2=pypi_0
-typing_extensions=4.14.1=pyhe01879c_0
-tzdata=2025.2=pypi_0
-tzlocal=5.3.1=pypi_0
-ucrt=10.0.22621.0=haa95532_0
-url-normalize=1.4.3=pypi_0
-urllib3=2.5.0=pypi_0
-uuid7=0.1.0=pypi_0
-uv=0.8.4=pypi_0
-vc=14.3=h2df5915_10
-vc14_runtime=14.44.35208=h4927774_10
-vs2015_runtime=14.44.35208=ha6b5a95_10
-watchdog=6.0.0=pypi_0
-watchfiles=1.1.0=pypi_0
-wcwidth=0.2.13=pyhd8ed1ab_1
-webencodings=0.5.1=pypi_0
-websocket-client=1.8.0=pypi_0
-websockets=15.0.1=pypi_0
-wheel=0.45.1=py311haa95532_0
-widgetsnbextension=4.0.14=pypi_0
-wrapt=1.17.2=pypi_0
-xlrd=2.0.2=pypi_0
-xmltodict=0.13.0=pypi_0
-xxhash=3.5.0=pypi_0
-xz=5.6.4=h4754444_1
-yarl=1.20.1=pypi_0
-yfinance=0.2.58=pypi_0
-zeromq=4.3.5=ha9f60a1_7
-zipp=3.23.0=pyhd8ed1ab_0
-zlib=1.2.13=h8cc25b3_1
-zstandard=0.23.0=pypi_0
+# Converted requirements.txt for pip compatibility
+ag2==0.9.7
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.0
+aiohttp-client-cache==0.11.1
+aiosignal==1.4.0
+aiosqlite==0.20.0
+alembic==1.16.4
+altair==5.5.0
+annotated-types==0.7.0
+anthropic==0.60.0
+anyio==4.9.0
+appdirs==1.4.4
+arch==7.2.0
+asgiref==3.9.1
+asttokens==3.0.0
+async-lru==2.0.5
+asyncer==0.0.8
+attrs==25.3.0
+authlib==1.6.1
+autogen==0.9.7
+autogen-agentchat==0.7.1
+autogen-core==0.7.1
+babel==2.17.0
+backoff==2.2.1
+bcrypt==4.3.0
+beautifulsoup4==4.13.4
+blinker==1.9.0
+brotli==1.1.0
+browserbase==1.4.0
+build==1.2.2.post1
+cachetools==5.5.2
+cattrs==25.1.1
+certifi==2025.7.14
+cffi==1.17.1
+charset-normalizer==3.4.2
+chroma-hnswlib==0.7.6
+chromadb==0.5.23
+click==8.2.1
+cohere==5.16.1
+colorama==0.4.6
+coloredlogs==15.0.1
+comm==0.2.3
+contourpy==1.3.3
+courlan==1.3.2
+cpython==3.11.13
+crewai==0.152.0
+crewai-tools==0.59.0
+cryptography==45.0.5
+curl-adapter==1.1.0
+curl-cffi==0.12.0
+cycler==0.12.1
+cyclopts==3.22.2
+cython==3.1.2
+dataclasses-json==0.6.7
+dateparser==1.2.2
+debugpy==1.8.15
+decorator==5.2.1
+deepdiff==8.6.1
+defusedxml==0.8.0rc2
+deprecation==2.1.0
+diskcache==5.6.3
+distro==1.9.0
+dnspython==2.7.0
+docker==7.1.0
+docstring-parser==0.17.0
+docutils==0.21.2
+durationpy==0.10
+email-validator==2.2.0
+embedchain==0.1.128
+et-xmlfile==2.0.0
+exceptiongroup==1.3.0
+exchange-calendars==4.11
+executing==2.2.0
+fastapi==0.116.2
+fastavro==1.11.1
+fastjsonschema==2.21.1
+fastmcp==2.10.6
+filelock==3.18.0
+filetype==1.2.0
+finvizfinance==1.1.1
+flaml==2.3.5
+flatbuffers==25.2.10
+fonttools==4.59.0
+formulaic==1.2.0
+fpdf==1.7.2
+freezegun==1.5.3
+frozendict==2.4.6
+frozenlist==1.7.0
+fsspec==2025.7.0
+gitdb==4.0.12
+gitpython==3.1.44
+google-ai-generativelanguage==0.6.18
+google-api-core==2.25.1
+google-auth==2.40.3
+googleapis-common-protos==1.70.0
+gptcache==0.1.44
+greenlet==3.2.3
+grpcio==1.74.0
+grpcio-status==1.74.0
+h11==0.16.0
+h2==4.2.0
+hpack==4.1.0
+html5lib==1.1
+htmldate==1.9.3
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+httpx-sse==0.4.0
+huggingface-hub==0.34.3
+humanfriendly==10.0
+hyperframe==6.1.0
+idna==3.10
+importlib-metadata==8.7.0
+importlib-resources==6.5.2
+inflection==0.5.1
+iniconfig==2.1.0
+inscriptis==2.6.0
+instructor==1.10.0
+interface-meta==1.3.0
+ipykernel==6.29.5
+ipython==9.4.0
+ipython_pygments_lexers==1.1.1
+ipywidgets==8.1.7
+itsdangerous==2.2.0
+jedi==0.19.2
+jinja2==3.1.6
+jiter==0.10.0
+joblib==1.5.1
+json-repair==0.25.2
+json5==0.12.0
+jsonpatch==1.33
+jsonpickle==4.1.1
+jsonpointer==3.0.0
+jsonref==1.1.0
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+jupyterlab-widgets==3.0.15
+justext==3.0.2
+kiwisolver==1.4.8
+korean-lunar-calendar==0.3.1
+krb5==1.21.3
+kubernetes==33.1.0
+lancedb==0.24.2
+langchain==0.3.26
+langchain-cohere==0.3.5
+langchain-community==0.3.27
+langchain-core==0.3.70
+langchain-experimental==0.3.4
+langchain-google-genai==2.1.8
+langchain-openai==0.2.14
+langchain-text-splitters==0.3.8
+langgraph==0.5.4
+langgraph-checkpoint==2.1.1
+langgraph-prebuilt==0.5.2
+langgraph-sdk==0.1.74
+langsmith==0.3.45
+libffi==3.4.4
+libsodium==1.0.20
+linearmodels==6.1
+litellm==1.74.3
+llvmlite==0.44.0
+lxml==5.4.0
+lxml-html-clean==0.4.2
+mako==1.3.10
+markdown-it-py==3.0.0
+markupsafe==3.0.2
+marshmallow==3.26.1
+matplotlib==3.10.3
+matplotlib-inline==0.1.7
+mcp==1.12.0
+mdurl==0.1.2
+mem0ai==0.1.115
+mmh3==5.2.0
+monotonic==1.6
+more-itertools==10.7.0
+mpmath==1.3.0
+multidict==6.6.3
+multitasking==0.0.12
+mypy-extensions==1.1.0
+narwhals==1.48.0
+nasdaq-data-link==1.0.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.5
+nodeenv==1.9.1
+numba==0.61.2
+numpy==1.26.4
+oauthlib==3.3.1
+onnxruntime==1.22.0
+openai==1.97.0
+openapi-pydantic==0.5.1
+openbb==4.5.0
+openbb-alpha-vantage==1.4.2
+openbb-benzinga==1.5.0
+openbb-biztoc==1.5.0
+openbb-bls==1.2.0
+openbb-cboe==1.4.2
+openbb-cftc==1.2.0
+openbb-charting==2.3.5
+openbb-commodity==1.4.0
+openbb-congress-gov==1.1.0
+openbb-core==1.5.1
+openbb-crypto==1.5.0
+openbb-currency==1.5.0
+openbb-deribit==1.0.2
+openbb-derivatives==1.5.0
+openbb-ecb==1.4.3
+openbb-econdb==1.4.0
+openbb-econometrics==1.5.4
+openbb-economy==1.5.0
+openbb-equity==1.5.0
+openbb-etf==1.5.0
+openbb-famafrench==1.0.0
+openbb-federal-reserve==1.5.0
+openbb-finra==1.4.2
+openbb-finviz==1.3.2
+openbb-fixedincome==1.5.0
+openbb-fmp==1.5.0
+openbb-fred==1.5.0
+openbb-government-us==1.4.2
+openbb-imf==1.2.0
+openbb-index==1.5.0
+openbb-intrinio==1.5.0
+openbb-mcp-server==1.0.0
+openbb-multpl==1.1.2
+openbb-nasdaq==1.4.2
+openbb-news==1.5.0
+openbb-oecd==1.5.0
+openbb-platform-api==1.2.1
+openbb-polygon==1.5.0
+openbb-quantitative==1.4.4
+openbb-regulators==1.5.0
+openbb-sec==1.5.0
+openbb-seeking-alpha==1.4.2
+openbb-stockgrid==1.4.2
+openbb-technical==1.4.4
+openbb-tiingo==1.5.0
+openbb-tmx==1.3.3
+openbb-tradier==1.3.2
+openbb-tradingeconomics==1.5.0
+openbb-us-eia==1.2.0
+openbb-wsj==1.4.2
+openbb-yfinance==1.5.0
+openpyxl==3.1.5
+opentelemetry-api==1.36.0
+opentelemetry-exporter-otlp-proto-common==1.36.0
+opentelemetry-exporter-otlp-proto-grpc==1.36.0
+opentelemetry-exporter-otlp-proto-http==1.36.0
+opentelemetry-instrumentation==0.57b0
+opentelemetry-instrumentation-asgi==0.57b0
+opentelemetry-instrumentation-fastapi==0.57b0
+opentelemetry-proto==1.36.0
+opentelemetry-sdk==1.36.0
+opentelemetry-semantic-conventions==0.57b0
+opentelemetry-util-http==0.57b0
+orderly-set==5.5.0
+orjson==3.11.0
+ormsgpack==1.10.0
+overrides==7.7.0
+packaging==25.0
+pandas==2.3.1
+pandas-ta-openbb==0.4.22
+parso==0.8.4
+patsy==1.0.1
+pdfminer-six==20250506
+pdfplumber==0.11.7
+peewee==3.18.2
+pickleshare==0.7.5
+pillow==11.3.0
+platformdirs==4.3.8
+playwright==1.54.0
+plotly==6.2.0
+pluggy==1.6.0
+portalocker==2.7.0
+posthog==3.25.0
+prompt-toolkit==3.0.51
+propcache==0.3.2
+proto-plus==1.26.1
+protobuf==5.29.5
+psutil==7.0.0
+psycopg2==2.9.11
+psycopg2-binary==2.9.11
+pure_eval==0.2.3
+pyarrow==21.0.0
+pyasn1==0.6.1
+pyasn1-modules==0.4.2
+pyautogen==0.10.0
+pycparser==2.22
+pycurl==7.45.6
+pydantic==2.12.0
+pydantic-core==2.41.1
+pydantic-settings==2.10.1
+pydeck==0.9.1
+pyee==13.0.0
+pygments==2.19.2
+pyhdfe==0.2.0
+pyjwt==2.10.1
+pyluach==2.2.0
+pymupdf==1.26.4
+pyparsing==3.2.3
+pypdf==5.9.0
+pypdfium2==4.30.0
+pyperclip==1.9.0
+pypika==0.48.9
+pyproject-hooks==1.2.0
+pyreadline3==3.5.4
+pyright==1.1.403
+pysbd==0.3.4
+pytest==8.4.1
+pytest-freezegun==0.4.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+python-multipart==0.0.20
+pytube==15.0.0
+pytz==2025.2
+pyvis==0.3.2
+pywin32==311
+pyyaml==6.0.2
+pyzmq==27.0.0
+qdrant-client==1.15.0
+random-user-agent==1.0.1
+referencing==0.36.2
+regex==2024.11.6
+reportlab==4.4.4
+requests==2.32.5
+requests-cache==1.2.1
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==13.9.4
+rich-rst==1.3.1
+rpds-py==0.26.0
+rsa==4.9.1
+ruff==0.13.3
+safetensors==0.6.2
+schedule==1.2.2
+schema==0.7.7
+scikit-learn==1.7.1
+scipy==1.15.3
+seaborn==0.13.2
+sentence-transformers==5.1.0
+setuptools==78.1.1
+setuptools-scm==8.3.1
+shellingham==1.5.4
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+soupsieve==2.7
+sqlalchemy==2.0.41
+sse-starlette==2.4.1
+stack_data==0.6.3
+stagehand==0.5.0
+starlette==0.46.2
+statsmodels==0.14.5
+streamlit==1.47.0
+sympy==1.14.0
+tabulate==0.9.0
+tenacity==9.1.2
+termcolor==3.1.0
+threadpoolctl==3.6.0
+tiktoken==0.9.0
+tld==0.13.1
+tokenizers==0.21.4
+toml==0.10.2
+tomli==2.2.1
+tomli-w==1.2.0
+toolz==1.0.0
+torch==2.8.0
+tornado==6.5.1
+tqdm==4.67.1
+trafilatura==2.0.0
+traitlets==5.14.3
+transformers==4.55.4
+typer==0.16.0
+types-requests==2.32.4.20250611
+typing-inspect==0.9.0
+typing-inspection==0.4.2
+typing_extensions==4.14.1
+tzdata==2025.2
+tzlocal==5.3.1
+url-normalize==1.4.3
+urllib3==2.5.0
+uuid7==0.1.0
+uv==0.8.4
 uvicorn[standard]>=0.24.0
