--- a/requirements.txt
+++ b/requirements.txt
@@ -1,198 +1,12 @@
-# Converted requirements.txt for pip compatibility
-ag2==0.9.7
-aiohappyeyeballs==2.6.1
-aiohttp==3.13.0
-aiohttp-client-cache==0.11.1
-aiosignal==1.4.0
-aiosqlite==0.20.0
-alembic==1.16.4
-altair==5.5.0
-annotated-types==0.7.0
-anthropic==0.60.0
-anyio==4.9.0
-appdirs==1.4.4
-arch==7.2.0
-asgiref==3.9.1
-asttokens==3.0.0
-async-lru==2.0.5
-asyncer==0.0.8
-attrs==25.3.0
-authlib==1.6.1
-autogen==0.9.7
-autogen-agentchat==0.7.1
-autogen-core==0.7.1
-babel==2.17.0
-backoff==2.2.1
-bcrypt==4.3.0
-beautifulsoup4==4.13.4
-blinker==1.9.0
-brotli==1.1.0
-browserbase==1.4.0
-build==1.2.2.post1
-cachetools==5.5.2
-cattrs==25.1.1
-certifi==2025.7.14
-cffi==1.17.1
-charset-normalizer==3.4.2
-chroma-hnswlib==0.7.6
-chromadb==0.5.23
-click==8.2.1
-cohere==5.16.1
-colorama==0.4.6
-coloredlogs==15.0.1
-comm==0.2.3
-contourpy==1.3.3
-courlan==1.3.2
-cpython==3.11.13
-crewai==0.152.0
-crewai-tools==0.59.0
-cryptography==45.0.5
-curl-adapter==1.1.0
-curl-cffi==0.12.0
-cycler==0.12.1
-cyclopts==3.22.2
-cython==3.1.2
-dataclasses-json==0.6.7
-dateparser==1.2.2
-debugpy==1.8.15
-decorator==5.2.1
-deepdiff==8.6.1
-defusedxml==0.8.0rc2
-deprecation==2.1.0
-diskcache==5.6.3
-distro==1.9.0
-dnspython==2.7.0
-docker==7.1.0
-docstring-parser==0.17.0
-docutils==0.21.2
-durationpy==0.10
-email-validator==2.2.0
-embedchain==0.1.128
-et-xmlfile==2.0.0
-exceptiongroup==1.3.0
-exchange-calendars==4.11
-executing==2.2.0
-fastapi==0.116.2
-fastavro==1.11.1
-fastjsonschema==2.21.1
-fastmcp==2.10.6
-filelock==3.18.0
-filetype==1.2.0
-finvizfinance==1.1.1
-flaml==2.3.5
-flatbuffers==25.2.10
-fonttools==4.59.0
-formulaic==1.2.0
-fpdf==1.7.2
-freezegun==1.5.3
-frozendict==2.4.6
-frozenlist==1.7.0
-fsspec==2025.7.0
-gitdb==4.0.12
-gitpython==3.1.44
-google-ai-generativelanguage==0.6.18
-google-api-core==2.25.1
-google-auth==2.40.3
-googleapis-common-protos==1.70.0
-gptcache==0.1.44
-greenlet==3.2.3
-grpcio==1.74.0
-grpcio-status==1.74.0
-h11==0.16.0
-h2==4.2.0
-hpack==4.1.0
-html5lib==1.1
-htmldate==1.9.3
-httpcore==1.0.9
-httptools==0.6.4
-httpx==0.28.1
-httpx-sse==0.4.0
-huggingface-hub==0.34.3
-humanfriendly==10.0
-hyperframe==6.1.0
-idna==3.10
-importlib-metadata==8.7.0
-importlib-resources==6.5.2
-inflection==0.5.1
-iniconfig==2.1.0
-inscriptis==2.6.0
-instructor==1.10.0
-interface-meta==1.3.0
-ipykernel==6.29.5
-ipython==9.4.0
-ipython_pygments_lexers==1.1.1
-ipywidgets==8.1.7
-itsdangerous==2.2.0
-jedi==0.19.2
-jinja2==3.1.6
-jiter==0.10.0
-joblib==1.5.1
-json-repair==0.25.2
-json5==0.12.0
-jsonpatch==1.33
-jsonpickle==4.1.1
-jsonpointer==3.0.0
-jsonref==1.1.0
-jsonschema==4.25.0
-jsonschema-specifications==2025.4.1
-jupyter_client==8.6.3
-jupyter_core==5.8.1
-jupyterlab-widgets==3.0.15
-justext==3.0.2
-kiwisolver==1.4.8
-korean-lunar-calendar==0.3.1
-krb5==1.21.3
-kubernetes==33.1.0
-lancedb==0.24.2
-langchain==0.3.26
-langchain-cohere==0.3.5
-langchain-community==0.3.27
-langchain-core==0.3.70
-langchain-experimental==0.3.4
-langchain-google-genai==2.1.8
-langchain-openai==0.2.14
-langchain-text-splitters==0.3.8
-langgraph==0.5.4
-langgraph-checkpoint==2.1.1
-langgraph-prebuilt==0.5.2
-langgraph-sdk==0.1.74
-langsmith==0.3.45
-libffi==3.4.4
-libsodium==1.0.20
-linearmodels==6.1
-litellm==1.74.3
-llvmlite==0.44.0
-lxml==5.4.0
-lxml-html-clean==0.4.2
-mako==1.3.10
-markdown-it-py==3.0.0
-markupsafe==3.0.2
-marshmallow==3.26.1
-matplotlib==3.10.3
-matplotlib-inline==0.1.7
-mcp==1.12.0
-mdurl==0.1.2
-mem0ai==0.1.115
-mmh3==5.2.0
-monotonic==1.6
-more-itertools==10.7.0
-mpmath==1.3.0
-multidict==6.6.3
-multitasking==0.0.12
-mypy-extensions==1.1.0
-narwhals==1.48.0
-nasdaq-data-link==1.0.4
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.5
-nodeenv==1.9.1
-numba==0.61.2
-numpy==1.26.4
-oauthlib==3.3.1
-onnxruntime==1.22.0
-openai==1.97.0
-openapi-pydantic==0.5.1
-openbb==4.5.0
+streamlit>=1.30.0
+langgraph>=0.0.25
+langchain>=0.1.0
+langchain-openai>=0.0.5
+langchain-core>=0.1.14
+openai>=1.0.0
+yfinance>=0.2.18
+python-dotenv>=1.0.0
+openbb>=3.2.0
 openbb-alpha-vantage==1.4.2
 openbb-benzinga==1.5.0
 openbb-biztoc==1.5.0
@@ -244,144 +58,12 @@ openbb-tradingeconomics==1.5.0
 openbb-us-eia==1.2.0
 openbb-wsj==1.4.2
 openbb-yfinance==1.5.0
-openpyxl==3.1.5
-opentelemetry-api==1.36.0
-opentelemetry-exporter-otlp-proto-common==1.36.0
-opentelemetry-exporter-otlp-proto-grpc==1.36.0
-opentelemetry-exporter-otlp-proto-http==1.36.0
-opentelemetry-instrumentation==0.57b0
-opentelemetry-instrumentation-asgi==0.57b0
-opentelemetry-instrumentation-fastapi==0.57b0
-opentelemetry-proto==1.36.0
-opentelemetry-sdk==1.36.0
-opentelemetry-semantic-conventions==0.57b0
-opentelemetry-util-http==0.57b0
-orderly-set==5.5.0
-orjson==3.11.0
-ormsgpack==1.10.0
-overrides==7.7.0
-packaging==25.0
-pandas==2.3.1
-pandas-ta-openbb==0.4.22
-parso==0.8.4
-patsy==1.0.1
-pdfminer-six==20250506
-pdfplumber==0.11.7
-peewee==3.18.2
-pickleshare==0.7.5
-pillow==11.3.0
-platformdirs==4.3.8
-playwright==1.54.0
-plotly==6.2.0
-pluggy==1.6.0
-portalocker==2.7.0
-posthog==3.25.0
-prompt-toolkit==3.0.51
-propcache==0.3.2
-proto-plus==1.26.1
-protobuf==5.29.5
-psutil==7.0.0
-psycopg2==2.9.11
-psycopg2-binary==2.9.11
-pure_eval==0.2.3
-pyarrow==21.0.0
-pyasn1==0.6.1
-pyasn1-modules==0.4.2
-pyautogen==0.10.0
-pycparser==2.22
-pycurl==7.45.6
-pydantic==2.12.0
-pydantic-core==2.41.1
-pydantic-settings==2.10.1
-pydeck==0.9.1
-pyee==13.0.0
-pygments==2.19.2
-pyhdfe==0.2.0
-pyjwt==2.10.1
-pyluach==2.2.0
-pymupdf==1.26.4
-pyparsing==3.2.3
-pypdf==5.9.0
-pypdfium2==4.30.0
-pyperclip==1.9.0
-pypika==0.48.9
-pyproject-hooks==1.2.0
-pyreadline3==3.5.4
-pyright==1.1.403
-pysbd==0.3.4
-pytest==8.4.1
-pytest-freezegun==0.4.2
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
-python-multipart==0.0.20
-pytube==15.0.0
-pytz==2025.2
-pyvis==0.3.2
-pywin32==311
-pyyaml==6.0.2
-pyzmq==27.0.0
-qdrant-client==1.15.0
-random-user-agent==1.0.1
-referencing==0.36.2
-regex==2024.11.6
-reportlab==4.4.4
-requests==2.32.5
-requests-cache==1.2.1
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rich==13.9.4
-rich-rst==1.3.1
-rpds-py==0.26.0
-rsa==4.9.1
-ruff==0.13.3
-safetensors==0.6.2
-schedule==1.2.2
-schema==0.7.7
-scikit-learn==1.7.1
-scipy==1.15.3
-seaborn==0.13.2
-sentence-transformers==5.1.0
-setuptools==78.1.1
-setuptools-scm==8.3.1
-shellingham==1.5.4
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
-soupsieve==2.7
-sqlalchemy==2.0.41
-sse-starlette==2.4.1
-stack_data==0.6.3
-stagehand==0.5.0
-starlette==0.46.2
-statsmodels==0.14.5
-streamlit==1.47.0
-sympy==1.14.0
-tabulate==0.9.0
-tenacity==9.1.2
-termcolor==3.1.0
-threadpoolctl==3.6.0
-tiktoken==0.9.0
-tld==0.13.1
-tokenizers==0.21.4
-toml==0.10.2
-tomli==2.2.1
-tomli-w==1.2.0
-toolz==1.0.0
-torch==2.8.0
-tornado==6.5.1
-tqdm==4.67.1
-trafilatura==2.0.0
-traitlets==5.14.3
-transformers==4.55.4
-typer==0.16.0
-types-requests==2.32.4.20250611
-typing-inspect==0.9.0
-typing-inspection==0.4.2
-typing_extensions==4.14.1
-tzdata==2025.2
-tzlocal==5.3.1
-url-normalize==1.4.3
-urllib3==2.5.0
-uuid7==0.1.0
-uv==0.8.4
+reportlab>=4.0.8
+psycopg2-binary>=2.9.9
+schedule>=1.2.0
+pytz>=2024.1
+requests
+pandas
+ipython>=8.0.0
+fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
